--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1> HEllo world</h1>
 	<script src="index.js"></script>
   </body>
 </html>
